fix: enable touch scrolling on iOS

--- a/src/assets/styles/selection-menu.css
+++ b/src/assets/styles/selection-menu.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100vh;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   background: #fff;
   color: #e41a1f;
   display: none;
